# server-modloader-coremod

./: CMakeLists.txt  README.md  common_hooks.cpp  log_forwarder.cpp  main.cpp  version_name.cpp
.circleci/: config.yml
.github/workflows/: build.yml
